--- a/WottReboot.vcxproj.filters
+++ b/WottReboot.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="VertexAttrib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VertexBufferData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.hpp">
