Added Shaders and Programs support.
Adding Support for Vertex/Fragment Shaders
Updated Vertex/Fragment Shader samples
Updated Triangle sample
Added screen cleaning.
Added Global.hpp

--- a/WottReboot.vcxproj
+++ b/WottReboot.vcxproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AShader.hpp" />
+    <ClInclude Include="Global.hpp" />
     <ClInclude Include="IDrawable.hpp" />
     <ClInclude Include="Input.hpp" />
     <ClInclude Include="IObject.hpp" />
