--- a/WottReboot.vcxproj.filters
+++ b/WottReboot.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClInclude Include="VertexBufferData.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Global.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
