--- a/WottReboot.vcxproj
+++ b/WottReboot.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="VideoFlags.cpp" />
     <ClCompile Include="VideoMode.cpp" />
     <ClCompile Include="Window.cpp" />
+    <ClCompile Include="WinMutex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AObject.hpp" />
@@ -109,10 +110,12 @@
     <ClInclude Include="I3DMatrix.hpp" />
     <ClInclude Include="I3DObject.hpp" />
     <ClInclude Include="ADrawable.hpp" />
+    <ClInclude Include="IMutex.hpp" />
     <ClInclude Include="Input.hpp" />
     <ClInclude Include="IObject.hpp" />
     <ClInclude Include="IProgram.hpp" />
     <ClInclude Include="IShader.hpp" />
+    <ClInclude Include="IThread.hpp" />
     <ClInclude Include="IUpdatable.hpp" />
     <ClInclude Include="Logging.hpp" />
     <ClInclude Include="Program.hpp" />
@@ -130,6 +133,8 @@
     <ClInclude Include="VideoFlags.hpp" />
     <ClInclude Include="VideoMode.hpp" />
     <ClInclude Include="Window.hpp" />
+    <ClInclude Include="WinMutex.hpp" />
+    <ClInclude Include="WinThread.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
